--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
     font-size: 18px;
     padding: 0 10px;
     font-family: "Segoe UI Variable Text",
-        "Segoe UI"
+        "Segoe UI",
         -apple-system,
         BlinkMacSystemFont,
         Helvetica,
