--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ h1, h2, h3 {
 }
 
 .dongle {
-  color: #004caa;
+  color: #006cf3;
 }
 
 ul {
@@ -48,10 +48,6 @@ li::before {
     body {
         background-color: #1e1e1e;
         color: white;
-    }
-    #domains {
-        background-color: #2b2b2b;
-        word-wrap: break-word;
     }
     a {
         color: #3391ff;
